# kaggle_cafa6

./: .gitignore  README.md  cafa6_solution.ipynb  go_embeddings.ipynb  protein_embeddings.ipynb  pyproject.toml  requirements.txt  simple_go_extractor.py  simple_go_extractor_notebook.ipynb
go_extractor/: __init__.py  functions.py  main.py  prompt_templates.py  utils.py
plans/: challenge_overview.txt  plan_1_initial_approach.md  plan_2_modular_embeddings.md  plan_3_go_embeddings_extraction.md
